<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151685"
    tools:context=".view.activities.RegistroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/tvtituloregistro"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etnomusuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetnombre" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etapeusuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetapellido" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etedadusuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetedad" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etcelusuario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/valetnumero" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/TXT"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbtnDNI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="6dp"
                    android:buttonTint="#1994CC"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/documentoDNI"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rdbtnCE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:buttonTint="#1994CC"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/tipoDocumentoCI"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etusureg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/valetusureg" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etpassreg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/valetpassreg"
                    android:inputType="text|textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_gris_500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etrepassreg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valetrepassreg"
                    android:inputType="text|textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnregistrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#1F21C7"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/valbtnregistrarse" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnirlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#1994CC"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/valbtnirlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
