<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D8D8F4">

        <TextView
            android:id="@+id/diaSemana"
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="TextView"
            android:textColor="#F10004"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nroDia"
            android:layout_width="69dp"
            android:layout_height="45dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/inter"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diaSemana" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/Cuenta"
            app:layout_constraintStart_toEndOf="@+id/diaSemana"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/Lugar"
            app:layout_constraintStart_toEndOf="@+id/diaSemana"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/HoraInicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/HoraFin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/txtCuenta" />

        <TextView
            android:id="@+id/txtHorinicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/txtLugar" />

        <TextView
            android:id="@+id/txtHoraFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/txtHorinicio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>