<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#151685"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="127dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logoImageView"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHoraMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="183dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="160dp"
            android:fontFamily="@font/inter"
            android:padding="30dp"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.572"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRegistroLlegada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="#2196F3"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/btnRegistra"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHoraMenu" />

        <Button
            android:id="@+id/btnAdicionales"
            android:layout_width="140dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F10004"
            android:fontFamily="@font/inter_bold"
            android:text="@string/Adicionales"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistroLlegada" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#E9058529"
            android:fontFamily="@font/inter_bold"
            android:text="@string/CalculoQuincena"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toEndOf="@+id/btnAdicionales"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistroLlegada" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="-10dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3">

            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="409dp"
                android:layout_marginTop="8dp"
                android:background="#FBFBFE">

            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>